[CMake] REGRESSION(r289611): Debug builds fail linking binaries with ld.lld https://bugs.webkit.org/show_bug.cgi?id=236506

Reviewed by Yusuke Suzuki.

* jit/ThunkGenerators.cpp: Use .previous in inline assembler for thunks in order to ensure
that mixed emission of assembler code and variable definitions correctly puts each of them
in their rightful sections in the output object code.



Canonical link: https://commits.webkit.org/247180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289695 268f45cc-cd09-0410-ab3c-d52691b4dbfc